# jasminegraph

./: .clang-format  .dockerignore  .gitignore  .ninja_deps  .ninja_log  .pylintrc  CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile.grafana  README.md  STOPSTRM_IMPLEMENTATION.md  TEMPORAL_DATA_FLOW.md  action.yml  backup.sh  build.ninja  build.sh  cmake_install.cmake  config.alloy  docker-compose.yml  globals.h  install-prerequisites.sh  jasminegraph.sh  jasmingraph.sh  loki-config.yaml  main.cpp  main.h  memory-leak-detection.sh  mock_ollama_server.py  run-command.txt  run-docker.sh  run-loki.sh  run-vtune-hostpot-analysis.sh  run.sh  start-docker-with-loki.sh  start-docker.sh  start-k8s.sh  stop-docker.sh  stream_to_kafka_ultra.py  tempo-config.yaml  (+5 more)
.github/workflows/: build.yml  cmake.yml  code-lint.yml  k8s-integration-tests.yml  linter.yml  main.yml  memory-leak-detection.yml  mock_ollama_server.py  release.yml
GraphSAGE/: requirements
GraphSAGE/eval/: ensemble.py  eval.py
GraphSAGE/graphsage/: aggregators.py  inits.py  layers.py  metrics.py  minibatch.py  models.py  neigh_samplers.py  predict.py  prediction.py  supervised_models.py  supervised_train.py  unsupervised_train.py  utils.py
cmake_modules/: CodeCoverage.cmake
conf/: batch-upload.txt  hosts.txt  jasminegraph-server.properties  jasminegraph-server.properties.sample  jasmingraph-server.properties  prometheus.yaml
conf/hdfs_config/: consumer.properties
conf/kafka_config/: consumer.properties
ddl/: metadb.sql  perfdb.sql  streamingdb.sql
docker/: Dockerfile
docs/: TEMPORAL_STORAGE.md  index.html
k8s/: configs.yaml  master-definition.yaml  master-deployment.yaml  master-service.yaml  prometheus.yaml  pushgateway.yaml  rbac.yaml  volumes.yaml  worker-definition.yaml  worker-deployment.yaml  worker-service.yaml  worker-volume-claim.yaml  worker-volume.yaml
k8s/hdfs/: datanode-deployment.yaml  datanode-pvc.yaml  datanode-service.yaml  hdfs-connector.yaml  namenode-deployment.yaml  namenode-pvc.yaml  namenode-service.yaml  nodemanager-deployment.yaml  nodemanager-service.yaml  pv.yaml  resourcemanager-deployment.yaml  resourcemanager-service.yaml
k8s/helm/: alloy.yaml  grafana.yaml  loki.yaml  tempo.yaml
loki/: docker-compose.yaml
metadb/: jasminegraph_meta.db
minimal/: Dockerfile.fs  Dockerfile.minimal  build.sh  run-docker.sh
performance_tools/: grafana_dashboard.json
performancedb/: jasminegraph_performance.db
src/backend/: JasminGraphBackend.cpp  JasminGraphBackend.h  JasmineGraphBackend.cpp  JasmineGraphBackend.h  JasmineGraphBackendProtocol.cpp  JasmineGraphBackendProtocol.h
src/centralstore/: JasmineGraphHashMapCentralStore.cpp  JasmineGraphHashMapCentralStore.h  JasmineGraphHashMapDuplicateCentralStore.cpp  JasmineGraphHashMapDuplicateCentralStore.h
src/dbinterface/: DBInterface.cpp  DBInterface.h
src/exception/: JasmineGraphException.cpp  JasmineGraphException.h
src/frontend/: JasminGraphFrontEnd.cpp  JasminGraphFrontEnd.h  JasminGraphFrontEndProtocol.cpp  JasmineGraphFrontEnd.cpp  JasmineGraphFrontEnd.h  JasmineGraphFrontEndProtocol.cpp  JasmineGraphFrontEndProtocol.h  JasmineGraphFrontEndServiceSession.cpp  JasmineGraphFrontEndServiceSession.h  KafkaTopicUtils.cpp  KafkaTopicUtils.h
src/k8s/: K8sInterface.cpp  K8sInterface.h  K8sWorkerController.cpp  K8sWorkerController.h
src/localstore/: JasminGraphHashMapLocalStore.cpp  JasminGraphHashMapLocalStore.h  JasminGraphLocalStore.cpp  JasminGraphLocalStore.h  JasmineGraphHashMapLocalStore.cpp  JasmineGraphHashMapLocalStore.h  JasmineGraphLocalStore.cpp  JasmineGraphLocalStore.h  JasmineGraphLocalStoreFactory.cpp  JasmineGraphLocalStoreFactory.h
src/metadb/: SQLiteDBInterface.cpp  SQLiteDBInterface.h  ddl.sql
src/nativestore/: CentralNodeBlock.cpp  CentralNodeBlock.h  CentralPropertyEdgeLink.cpp  CentralPropertyEdgeLink.h  CentralPropertyLink.cpp  CentralPropertyLink.h  CentralRelationBlock.cpp  CentralRelationBlock.h  CtypesLibrary.cpp  CtypesLibrary.h  DataPublisher.cpp  DataPublisher.h  LabelIndexManager.h  LabelIndexManger.cpp  LabelndexManger.cpp  MetaPropertyEdgeLink.cpp  MetaPropertyEdgeLink.h  MetaPropertyLink.cpp  MetaPropertyLink.h  NodeBlock.cpp  NodeBlock.h  NodeManager.cpp  NodeManager.h  PropertyEdgeLink.cpp  PropertyEdgeLink.h  PropertyLink.cpp  PropertyLink.h  RelationBlock.cpp  RelationBlock.h
src/partitioner/: Partition.cpp  Partition.h  Partitioner.cpp
src/performancedb/: PerformanceSQLiteDBInterface.cpp  PerformanceSQLiteDBInterface.h  ddl.sql
src/scale/: scaler.cpp  scaler.h
src/scheduler/: InterruptableSleep.h  SchedulerService.cpp  SchedulerService.h
src/server/: JasminGraphInstance.cpp  JasminGraphInstance.h  JasminGraphServer.cpp  JasminGraphServer.h  JasmineGraphInstance.cpp  JasmineGraphInstance.h  JasmineGraphInstanceFileTransferService.cpp  JasmineGraphInstanceFileTransferService.h  JasmineGraphInstanceFileTransferServiceSession.cpp  JasmineGraphInstanceFileTransferServiceSession.h  JasmineGraphInstanceProtocol.cpp  JasmineGraphInstanceProtocol.h  JasmineGraphInstanceService.cpp  JasmineGraphInstanceService.h  JasmineGraphInstanceServiceSession.cpp  JasmineGraphInstanceServiceSession.h  JasmineGraphServer.cpp  JasmineGraphServer.h  Kmeans.hpp  MinHash.hpp  MurmurHash3.h
src/streamingdb/: StreamingSQLiteDBInterface.cpp  (+1 more)
src_python/: fl_client.py  fl_client_shed.py  fl_server.py  fl_server_shed.py  mem.py  merge.py  org_agg.py  org_server.py
streamingdb/: jasminegraph_streaming.db
tests/: test.py
tests/unit/: CMakeLists.txt  Dockerfile  main.cpp
tests/unit/k8s/: K8sInterface_test.cpp  K8sWorkerController_test.cpp
tests/unit/kafka/: StreamRegistry_test.cpp
tests/unit/labelIndexing/: accuracy.py  evaluation.cpp  evalution.cpp
tests/unit/metadb/: SQLiteDBInterface_test.cpp
tests/unit/performancedb/: PerformanceSQLiteDBInterface_test.cpp
tests/unit/query/: IntraPartitionParallelExecutor_test.cpp  ThreadSafeBuffer_test.cpp
tests/unit/resources/: sample.yaml  sample_pod.yaml
tests/unit/util/: KafkaTopicUtils_test.cpp  Utils_test.cpp  utils_test.cpp
(+438 files in other folders)
